// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationForm renders correctly: cancel button 1`] = `
<button
  className="ant-btn css-dev-only-do-not-override-12jzuas ant-btn-default"
  disabled={false}
  id="location-form-cancel-button"
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  <LoadingIcon
    existIcon={false}
    loading={false}
    prefixCls="ant-btn"
  >
    <CSSMotion
      motionName="ant-btn-loading-icon-motion"
      onAppearActive={[Function]}
      onAppearStart={[Function]}
      onEnterActive={[Function]}
      onEnterStart={[Function]}
      onLeaveActive={[Function]}
      onLeaveStart={[Function]}
      removeOnLeave={true}
      visible={false}
    >
      <DomWrapper />
    </CSSMotion>
  </LoadingIcon>
  <span
    key=".0"
  >
    Cancel
  </span>
</button>
`;

exports[`LocationForm renders correctly: description field 1`] = `
<textarea
  className="ant-input css-dev-only-do-not-override-12jzuas"
  disabled={false}
  hidden={null}
  id="location-form_description"
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="Description"
  rows={4}
  style={
    Object {
      "resize": undefined,
    }
  }
  value=""
/>
`;

exports[`LocationForm renders correctly: description label 1`] = `
<label
  className=""
  htmlFor="location-form_description"
  title="Description"
>
  Description
</label>
`;

exports[`LocationForm renders correctly: isJurisdiction field 1`] = `
Array [
  <input
    checked={true}
    className="ant-radio-input"
    disabled={false}
    onChange={[Function]}
    type="radio"
    value={true}
  />,
  <input
    checked={false}
    className="ant-radio-input"
    disabled={false}
    onChange={[Function]}
    type="radio"
    value={false}
  />,
]
`;

exports[`LocationForm renders correctly: isJurisdiction label 1`] = `
<label
  className=""
  htmlFor="location-form_isJurisdiction"
  title="Physical type"
>
  Physical type
</label>
`;

exports[`LocationForm renders correctly: name field 1`] = `
<input
  aria-required="true"
  className="ant-input css-dev-only-do-not-override-12jzuas"
  disabled={false}
  hidden={null}
  id="location-form_name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="Enter a location name"
  type="text"
  value=""
/>
`;

exports[`LocationForm renders correctly: name label 1`] = `
<label
  className="ant-form-item-required"
  htmlFor="location-form_name"
  title="Name"
>
  Name
</label>
`;

exports[`LocationForm renders correctly: parentId field 1`] = `null`;

exports[`LocationForm renders correctly: parentId label 1`] = `
<label
  className=""
  htmlFor="location-form_parentId"
  title="Part Of"
>
  Part Of
</label>
`;

exports[`LocationForm renders correctly: status field 1`] = `
Array [
  <input
    checked={true}
    className="ant-radio-input"
    disabled={false}
    name="active"
    onChange={[Function]}
    type="radio"
    value="active"
  />,
  <input
    checked={false}
    className="ant-radio-input"
    disabled={false}
    name="active"
    onChange={[Function]}
    type="radio"
    value="inactive"
  />,
]
`;

exports[`LocationForm renders correctly: status label 1`] = `
<label
  className="ant-form-item-required"
  htmlFor="location-form_status"
  title="Status"
>
  Status
</label>
`;

exports[`LocationForm renders correctly: submit button 1`] = `
<button
  className="ant-btn css-dev-only-do-not-override-12jzuas ant-btn-primary"
  disabled={false}
  id="location-form-submit-button"
  onClick={[Function]}
  style={Object {}}
  type="submit"
>
  <LoadingIcon
    existIcon={false}
    loading={false}
    prefixCls="ant-btn"
  >
    <CSSMotion
      motionName="ant-btn-loading-icon-motion"
      onAppearActive={[Function]}
      onAppearStart={[Function]}
      onEnterActive={[Function]}
      onEnterStart={[Function]}
      onLeaveActive={[Function]}
      onLeaveStart={[Function]}
      removeOnLeave={true}
      visible={false}
    >
      <DomWrapper />
    </CSSMotion>
  </LoadingIcon>
  <span
    key=".0"
  >
    Save
  </span>
</button>
`;
